--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -9,9 +9,26 @@
 .page-wrapper {
   display: grid;
   justify-content: center;
-
   width: 100%;
   height: 100%;
   padding: 40px 0 0;
   background: #F3F7FA;
+}
+
+.page {
+  display: grid;
+  grid-template-rows: 90px 1fr;
+  grid-template-columns: 100%;
+  gap: 30px;
+  justify-content: center;
+  width: 756px;
+}
+
+.search {
+  display: grid;
+  gap: 30px 20px;
+  grid-template-areas:
+    "filter sort"
+    ". tickets";
+  grid-template-columns: 233px 1fr;
 }
