плейсхолдерные стили для чекбоксов

--- a/src/components/filter/filter.module.css
+++ b/src/components/filter/filter.module.css
@@ -10,3 +10,15 @@
   margin: 0 0 18px;
   padding: 18px 20px 0;
 }
+
+.checkboxes {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+/* Item */
+
+.checkbox:not(:last-child) {
+  margin-bottom: 5px;
+}
