добавляет внешний вид для фильтра

--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -26,9 +26,11 @@
 
 .search {
   display: grid;
-  gap: 30px 20px;
+  align-items: flex-start;
+  gap: 20px;
   grid-template-areas:
     "filter sort"
     ". tickets";
   grid-template-columns: 233px 1fr;
+  grid-template-rows: 50px 1fr;
 }
