--- a/src/components/checkbox/checkbox.module.css
+++ b/src/components/checkbox/checkbox.module.css
@@ -1,10 +1,23 @@
 .label {
   position: relative;
-  padding-left: 45px;
+  display: block;
+  width: 100%;
+  padding: 9px 20px 9px 51px;
+  cursor: pointer;
+  transition: 0.2s background-color ease;
+}
+
+.label:hover {
+  background-color: #f1fcff;
 }
 
 .label-text {
-  font-size: 16px;
+  margin: 0;
+  vertical-align: text-top;
+  font-size: 13px;
+  transition:
+    0.2s color ease,
+    0.2s opacity ease;
 }
 
 /* Checkbox Stuff */
@@ -15,30 +28,61 @@
   top: 0;
   left: 0;
   appearance: none;
+
+  cursor: pointer;
 }
 
 .checkbox::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 20px;
-  width: 16px;
-  height: 16px;
-  border: 1px solid black;
+  top: 8px;
+  left: 21px;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #9abbce;
+  border-radius: 2px;
+  transition: 0.2s border ease;
+}
+
+.checkbox::after {
+  content: "";
+  position: absolute;
+  top: 14px;
+  left: 25px;
+  background-image: url('~@public/images/tick.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 12px;
+  height: 8px;
+  visibility: hidden;
 }
 
 /* Interactions */
 
 .checkbox:hover::before,
 .checkbox:focus::before {
-  border: 1px solid red;
+  border: 1px solid #2196f3;
 }
 
-.checkbox:active::before {
-  border: 1px solid green;
+.checkbox:active ~ .label-text {
+  opacity: 0.5;
 }
 
-.checkbox:hover ~ .label-text,
+.checkbox:active::before,
+.checkbox:active::after {
+  opacity: 0.5;
+}
+
 .checkbox:focus ~ .label-text {
-  color: red;
+  color: #2196f3;
+}
+
+/* States */
+
+.checkbox:checked::before {
+  border-color: #2196f3;
+}
+
+.checkbox:checked::after {
+  visibility: visible;
 }
