--- a/src/index.css
+++ b/src/index.css
@@ -16,21 +16,51 @@
     url('~@public/fonts/open-sans-v18-latin_cyrillic-600.woff2') format('woff2');
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
+  min-width: 320px;
+  display: flex;
+  flex-direction: column;
+  word-wrap: break-word;
+
   font-family: 'Open Sans', Arial, sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #4a4a4a;
 
   height: 100%;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
 
 #root {
-  height: 100%;
-}
-
-html {
   height: 100%;
 }
